# MedicaChan

./: .gitignore  Product.md  README.md  bash.exe.stackdump  context.md  private_keys.json
deploy/: deployment.md
fetch/: agent.py  private_keys.json  tools.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(dashboard)/(home)/: page.tsx
frontend/src/app/(dashboard)/add-checkup/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/history/: page.tsx
frontend/src/app/(dashboard)/old/: page.tsx
frontend/src/app/(dashboard)/profile/: layout.tsx  page.tsx
frontend/src/app/landing/: page.tsx
frontend/src/app/register/: layout.tsx  page.tsx
frontend/src/components/: app-breadcrumb.tsx  app-header.tsx  app-sidebar.tsx  dashboard-layout.tsx  history-view.tsx  profile-view.tsx  registration-wizard.tsx  title-content.tsx
frontend/src/components/ui/: breadcrumb.tsx
ic/: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
ic/src/: ARCHITECTURE.md  DEVELOPMENT_FRAMEWORK.md
ic/src/backend/: Cargo.toml  backend.did
ic/src/backend/src/: example-interface.rs  example-with-fetchai.rs  lib.rs
ic/src/frontend/: example.env  package.json
ic/src/tokens/: Cargo.toml
ic/src/tokens/src/: main.rs
mock/: checkup_added.json  checkup_published.json  public_data.json  reward_balance.json  user_history.json  user_profile.json
product-requriments/: flow-data.mermaid  flow.mermaid
testing-mock/: Testing.md  health-checkup-now.json  health-checkup-tomorow.json  user.json
(+80 files in other folders)
