[package]
name = "tokens"
version = "0.1.0"
edition = "2024"

[dependencies]
candid = "0.10"
ic-cdk = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy-static = "1.4"
sha2 = "0.10"
num-bigint = "0.4"
num-traits = "0.2"

[dev-dependencies]
criterion = "0.5"

[[test]]
name = "tests"
path = "tests/tests.rs"
harness = false

[lib]
crate-type = ["cdylib"]
